# openmouf

./: .gitignore  README.md  install.txt  pyproject.toml
driver/: PCA9685.py  Servo.py  ServoMT.py  ServoMTO.py  calibrate.py
driver/doc/pi_samples/python3/: PCA9685.py
mouf/: __init__.py
mouf/data/: states.csv  stimulus.csv
mouf/driver/: PCA9685.py  Servo.py  ServoMG90S.py  ServoMTO.py  ServoPlot.py  __init__.py  body.py  calibrate.py  cli.py  interpolator.py
mouf/engine/: __init__.py  data_utils.py  emotion.py
moufctl/: __init__.py  emotion_viz.py  moufsim.py  moufsimGL.py  moufsimGL2.py  moufsimGL3.py  servo_viz.py  warp.py
moufctl/gl/: __init__.py  hull.py  moufshape.py  sphere.py  viewer.py
skeleton/: arm.scad  download_deps.sh  hull_feet.scad  hull_head.scad  hull_head2.scad  hull_t_bottom.scad  hull_t_up.scad  motor-gear-mount.scad  motor-gears.scad  mouf_parts.scad  mouf_sk.scad  mounf_assembly.scad  mounf_assembly_hull.scad  mounf_servo.scad  pi_base.scad  print.scad  rotate_around.scad  roundedcube.scad  servo.scad
skeleton/pi/: PiZerov4.scad
skeleton/stl/: all_parts  all_parts.stl  bottom_part.stl  feet_part.stl  head_part.stl  hull_feet.stl  hull_head2.stl  hull_t_bottom.stl  hull_t_up.stl  up_part.stl
tests/: __init__.py  test_data_utils.py  test_emotion.py  test_interpolator.py  test_servo.py
tests/data/: test_states.csv  test_stimulus.csv
